# backup_for_zeljko

./: Cargo.toml  README.md  RELEASES.md  cache3.txt
.github/workflows/: rust_fmt_auto_build_test.yml  rust_fmt_auto_win_release_test.yml
automation_tasks_rs/: .old_metadata.json  Cargo.toml  README.md
automation_tasks_rs/src/: build_cli_bin_mod.rs  cargo_auto_github_api_mod.rs  cargo_auto_github_api_mod.rs_old  generic_functions_mod.rs  generic_functions_mod.rs_old  main.rs  tasks_mod.rs  tasks_mod.rs_old
automation_tasks_rs/src/encrypt_decrypt_with_ssh_key_mod/: crates_io_api_token_mod.rs  crates_io_api_token_mod.rs_old  encrypt_decrypt_mod.rs  encrypt_decrypt_mod.rs_old  github_api_token_with_oauth2_mod.rs  github_api_token_with_oauth2_mod.rs_old
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/backup_for_zeljko/: all.html  index.html
docs/search.desc/backup_for_zeljko/: backup_for_zeljko-desc-0-.js
docs/src/backup_for_zeljko/: main.rs.html
src/: gui_helper.rs  main.rs
tmp/: temp3.txt
