[package]
name = "backup_for_zeljko"
version = "2024.1127.1606"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "counter GUI with egui"
repository = "https://github.com/bestia-dev/backup_for_zeljko"
readme = "README.md"
license = "MIT"
keywords = ["tutorial","egui","rust","gui"]
categories = ["gui"]
publish = false

[dependencies]
egui = "0.29.1"
eframe = "0.29.1"
chrono="0.4.38"

log="0.4.22"
log2 = "0.1.14"
