[package]
name = "backup_for_zeljko"
version = "2025.630.1133"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2024"
description = "Simple backup program tailored for my friend Željko. Made with rust and iced."
repository = "https://github.com/bestia-dev/backup_for_zeljko"
readme = "README.md"
license = "MIT"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained", "ready-for-use", "tutorial","iced","rust","gui"]
# Allowed categories are listed here <https://crates.io/category_slugs>
categories = ["gui"]
publish = false

[dependencies]
iced = {version= "0.13.1", features=["image"]}
chrono="0.4.41"
unwrap="1.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "fmt", "time"] }
tracing-appender="0.2.3"
win32console = "0.1.5"
time = {version="0.3.39", features=["macros","local-offset"]}

[build-dependencies]
winresource = "0.1.22"

